Half way there with slash commands