@@ -1,4 +1,4 @@
-package core.commands.crowns;
+package core.commands.uniques;
 
 import core.commands.abstracts.LeaderboardCommand;
 import core.commands.utils.CommandCategory;
@@ -8,17 +8,18 @@ import core.parsers.params.CommandParameters;
 import dao.ChuuService;
 import dao.entities.LbEntry;
 
+import java.util.Collections;
 import java.util.List;
 
-public class UniqueSongsLeaderboardCommand extends LeaderboardCommand<CommandParameters> {
-    public UniqueSongsLeaderboardCommand(ChuuService dao) {
+public class UniqueLeaderboardCommand extends LeaderboardCommand<CommandParameters> {
+    public UniqueLeaderboardCommand(ChuuService dao) {
         super(dao);
     }
 
 
     @Override
     protected CommandCategory initCategory() {
-        return CommandCategory.SERVER_STATS;
+        return CommandCategory.UNIQUES;
     }
 
     @Override
@@ -28,27 +29,27 @@ public class UniqueSongsLeaderboardCommand extends LeaderboardCommand<CommandPar
 
     @Override
     public String getEntryName(CommandParameters params) {
-        return "unique songs";
+        return "unique artists";
     }
 
     @Override
     public String getDescription() {
-        return ("Unique songs leaderboard in guild");
+        return ("Unique artist leaderboard in guild");
     }
 
     @Override
     public List<String> getAliases() {
-        return List.of("uniquesongslb", "uniquetrlb");
+        return Collections.singletonList("uniquelb");
     }
 
     @Override
     public List<LbEntry> getList(CommandParameters parameters) {
-        return db.getUniqueSongLeaderboard(parameters.getE().getGuild().getIdLong());
+        return db.getUniqueLeaderboard(parameters.getE().getGuild().getIdLong());
     }
 
     @Override
     public String getName() {
-        return "Unique songs leaderboard";
+        return "Unique Leaderboard";
     }
 
 }
