@@ -1,4 +1,4 @@
-package core.commands.crowns;
+package core.commands.uniques;
 
 import core.commands.Context;
 import core.commands.abstracts.ConcurrentCommand;
@@ -10,17 +10,16 @@ import core.parsers.Parser;
 import core.parsers.params.ChuuDataParams;
 import core.services.ColorService;
 import dao.ChuuService;
-import dao.entities.ArtistPlays;
 import dao.entities.DiscordUserDisplay;
+import dao.entities.TrackPlays;
 import dao.entities.UniqueWrapper;
 import net.dv8tion.jda.api.EmbedBuilder;
 
 import javax.validation.constraints.NotNull;
-import java.util.Collections;
 import java.util.List;
 
-public class UniqueCommand extends ConcurrentCommand<ChuuDataParams> {
-    public UniqueCommand(ChuuService dao) {
+public class UniqueSongCommand extends ConcurrentCommand<ChuuDataParams> {
+    public UniqueSongCommand(ChuuService dao) {
         super(dao);
         this.respondInPrivate = false;
 
@@ -28,7 +27,7 @@ public class UniqueCommand extends ConcurrentCommand<ChuuDataParams> {
 
     @Override
     protected CommandCategory initCategory() {
-        return CommandCategory.USER_STATS;
+        return CommandCategory.UNIQUES;
     }
 
     @Override
@@ -38,17 +37,17 @@ public class UniqueCommand extends ConcurrentCommand<ChuuDataParams> {
 
     @Override
     public String getDescription() {
-        return ("Returns lists of all the unique artist you have scrobbled");
+        return ("Returns lists of all the unique songs you have scrobbled");
     }
 
     @Override
     public List<String> getAliases() {
-        return Collections.singletonList("unique");
+        return List.of("uniquesong", "uniquesongs");
     }
 
     @Override
     public String getName() {
-        return "Unique list of artists";
+        return "Unique list of songs";
     }
 
     @Override
@@ -56,28 +55,25 @@ public class UniqueCommand extends ConcurrentCommand<ChuuDataParams> {
 
         String lastFmName = params.getLastFMData().getName();
 
-        UniqueWrapper<ArtistPlays> resultWrapper = getList(e.getGuild().getIdLong(), lastFmName);
+        UniqueWrapper<TrackPlays> resultWrapper = getList(isGlobal() ? -1 : e.getGuild().getIdLong(), lastFmName);
         int rows = resultWrapper.getUniqueData().size();
         if (rows == 0) {
-            sendMessageQueue(e, String.format("You have no %sunique artists :(", isGlobal() ? "global " : ""));
+            sendMessageQueue(e, String.format("You have no %sunique songs :(", isGlobal() ? "global " : ""));
             return;
         }
 
         StringBuilder a = new StringBuilder();
         for (int i = 0; i < 10 && i < rows; i++) {
-            ArtistPlays g = resultWrapper.getUniqueData().get(i);
+            TrackPlays g = resultWrapper.getUniqueData().get(i);
             a.append(i + 1).append(g.toString());
         }
 
         DiscordUserDisplay userInfo = CommandUtil.getUserInfoConsideringGuildOrNot(e, resultWrapper.getDiscordId());
 
-
         EmbedBuilder embedBuilder = new EmbedBuilder().setColor(ColorService.computeColor(e))
-                .setThumbnail(e.getGuild().getIconUrl());
-        embedBuilder.setDescription(a).setTitle(String.format("%s's%s unique artists", userInfo.getUsername(), isGlobal() ? " global" : ""), CommandUtil
-                .getLastFmUser(lastFmName))
-                .setThumbnail(userInfo.getUrlImage())
-                .setFooter(String.format("%s has %d%s unique artists!%n", CommandUtil.markdownLessUserString(userInfo.getUsername(), resultWrapper.getDiscordId(), e), rows, isGlobal() ? " global" : ""), null);
+                .setDescription(a)
+                .setAuthor(String.format("%s's%s unique songs", userInfo.getUsername(), isGlobal() ? " global" : ""), CommandUtil.getLastFmUser(lastFmName), userInfo.getUrlImage())
+                .setFooter(String.format("%s has %d%s unique songs!%n", CommandUtil.markdownLessUserString(userInfo.getUsername(), resultWrapper.getDiscordId(), e), rows, isGlobal() ? " global" : ""), null);
 
         e.sendMessage(embedBuilder.build()).queue(m ->
                 new Reactionary<>(resultWrapper.getUniqueData(), m, embedBuilder));
@@ -88,8 +84,8 @@ public class UniqueCommand extends ConcurrentCommand<ChuuDataParams> {
         return false;
     }
 
-    public UniqueWrapper<ArtistPlays> getList(long guildId, String lastFmName) {
-        return db.getUniqueArtist(guildId, lastFmName);
+    public UniqueWrapper<TrackPlays> getList(long guildId, String lastFmName) {
+        return db.getUniqueTracks(guildId, lastFmName);
     }
 
 
